1611 cs5 mod selection exercises

--- a/materials/_no-render/template.qmd
+++ b/materials/_no-render/template.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Paired t-test"
+title: "title"
 ---
 
 ```{r}
@@ -16,7 +16,7 @@ import shutup;shutup.please()
 exec(open('setup_files/setup.py').read())
 ```
 
-::: callout-tip
+::: {.callout-tip}
 ## Learning outcomes
 
 **Questions**
@@ -67,7 +67,7 @@ exec(open('setup_files/setup.py').read())
 
 ## Key points
 
-::: callout-note
+::: {.callout-note}
 -
 -
 -
