--- a/materials/cs5_practical_multiple-linear-regression.qmd
+++ b/materials/cs5_practical_multiple-linear-regression.qmd
@@ -1058,6 +1058,7 @@ Let's construct the four linear models in turn.
 First, we read in the data:
 
 ```{r}
+#| message: false
 trees <- read_csv("data/CS5-Trees.csv")
 ```
 
